# Tab5SSEM

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  partitions.csv  reformat-code.sh  run-checks.sh  sdkconfig  sdkconfig.defaults  skills-lock.json
.github/: copilot-instructions.md
.github/workflows/: build.yml  run-code-checks.yml
DockerFiles/CodeChecks/: Dockerfile
Documentation/: AssemblyLanguage.md  DisplaySpecification.md  Review.md  SSEMOverview.md
Documentation/Media/Originals/: IMG_4701.HEIC
components/ALU/: CMakeLists.txt  CPU.cpp  CPU.hpp  Compiler.cpp  Compiler.hpp  ConsoleUserInterface.cpp  ConsoleUserInterface.hpp  Constants.hpp  FileSystem.hpp  Instruction.cpp  Instruction.hpp  Instructions.cpp  Instructions.hpp  Register.cpp  Register.hpp  StoreLines.cpp  StoreLines.hpp  UserInterface.cpp  UserInterface.hpp
components/SSEM/: CMakeLists.txt  ControlPanel.cpp  ControlPanel.hpp  Display.cpp  Display.hpp  Utility.cpp  Utility.hpp
components/Tab5/: CMakeLists.txt  Rtc.cpp  Rtc.hpp  SDCard.cpp  SDCard.hpp  Touch.cpp  Touch.hpp
main/: CMakeLists.txt  Tab5SSEM.cpp  Tab5Template.cpp  idf_component.yml
tests/Desktop/: Readme.md  makefile  ssem_main.cpp  test_compiler.cpp  test_cpu.cpp  test_execute_unit_tests.cpp  test_instructions.cpp  test_register.cpp  test_storelines.cpp
tests/rtc/: CMakeLists.txt  sdkconfig.defaults
tests/rtc/main/: CMakeLists.txt  RtcTest.cpp
tests/sdcard/: .gitignore  CMakeLists.txt  sdkconfig.defaults
tests/sdcard/main/: CMakeLists.txt  SDCardTest.cpp
